# angular-rust-wasm-integration

./: README.md  angular.json  karma.conf.js  package-lock.json  package.json
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
src/: index.html  main.ts
src/app/: app.component.spec.ts  app.component.ts  app.module.ts  wasm-injection-token.ts
