[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

# Wasm bindgen will be used for interoperability between Rust and WASM
# Serde will be used to serialize/deserialize Rust objects in order to interact with WASM
[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
